--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "plotly.js": "^1.49.5",
@@ -19,6 +18,14 @@
     "redux-logger": "^3.0.6",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2",
+    "prettier": "^1.18.2",
+    "react-image-webp": "^0.3.1",
+    "husky": "^3.0.8",
+    "pretty-quick": "^1.11.1",
+    "dotenv": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,13 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.2",
-    "prettier": "^1.18.2",
-    "react-image-webp": "^0.3.1",
-    "husky": "^3.0.8",
-    "pretty-quick": "^1.11.1"
   },
   "husky": {
     "hooks": {
