--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.21",
+    "@types/node": "^12.12.5",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
@@ -17,15 +21,17 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.5",
+    "dotenv": "^8.2.0",
+    "husky": "^3.0.8",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
-    "react-image-webp": "^0.3.1",
-    "husky": "^3.0.8",
     "pretty-quick": "^1.11.1",
-    "dotenv": "^8.2.0"
+    "react-image-webp": "^0.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
