--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/recharts": "^1.8.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
